--- a/weather.css
+++ b/weather.css
@@ -38,7 +38,7 @@ h1{
     display: flex;
     justify-content: space-between;
 }
-.tab.current-tab{
+.tab{
     background-color:rgba(219, 226, 239, 0.5);
     border-radius: 4px;
 }
